Changelog
=========

1.5 (unreleased)
----------------

- Notify MailSentEvent when an email is sent.
  [cedricmessiant]


1.4 (2013-07-18)
----------------

- uses the same algorithm from collective.local.userlisting
  to get members with roles.
  [thomasdesvenain]

- i18n fixes.
  [thomasdesvenain]

- Fix sendto action permission.
  [thomasdesvenain]

- Plone 4.3 jQuery compatibility.
  [thomasdesvenain]

- Remove Controller Page Templates, use views.
  [thomasdesvenain]

- We can include images in sent email.
  [thomasdesvenain]


1.3 (2013-04-24)
----------------

- Use png icon (Plone 4.3 compatibility).
  [thomasdesvenain]

- Now we have a dexterity behavior.
  [thomasdesvenain]


1.2 (2013-02-13)
----------------

- Set a default subject.
  Link towards the document is now explicit in a default body.
  [thomasdesvenain]

- Link to 'view' for typeActionViewInListing types.
  [thomasdesvenain]


1.1.1 (2012-12-05)
------------------

- Fix: works with C security implementation.
  [thomasdesvenain]


1.1 (2012-12-05)
----------------

- Danish translation.
  [tmog]

- Use global roles.
  [thomasdesvenain]

- Filter roles on those which can view content.
  [thomasdesvenain]


1.0.0 (2011-04-06)
------------------

- Initial release.
  [thomasdesvenain]